ecs-fargate.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Cloudformation template to deploy a containerized prime number app on Amazon ECS using Fargate

Parameters:
  VPCId:
    Type: AWS::EC2::VPC::Id
    Description: Enter the VPC ID (e.g. vpc-123abc)
  
  # SubnetIds:
  #   Type: List<AWS::EC2::Subnet::Id>
  #   Description: Enter a public subnet ID (e.g. subnet-123abc)

  ImageUri:
    Type: String
    Description: Enter the URI of the image to use for the container (e.g. 123abc.dkr.ecr.us-east-1.amazonaws.com/sample-app:latest)

Resources:
  # Application Load Balancer
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: prime-number-alb
      Subnets: 
        - subnet-34b57f52
        - subnet-1e866044
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Scheme: internet-facing

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPCId
      Port: 80
      Protocol: HTTP
      TargetType: ip
      HealthCheckPath: /
  
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic to ALB
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: prime-number-cluster

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: ecsTaskExecutionRole
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                  - ecr:BatchCheckLayerAvailability
                  - ecr:GetDownloadUrlForLayer
                  - ecr:BatchGetImage
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:CreateLogGroup
                Resource: '*'
  
  ECSTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: prime-number-task
      Cpu: 256
      Memory: 512
      NetworkMode: awsvpc
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      ContainerDefinitions:
        - Name: prime-number-container
          Image: !Ref ImageUri
          Essential: true
          PortMappings:
            - ContainerPort: 80
              HostPort: 80
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
  
  ECSFargateService:
    Type: AWS::ECS::Service
    DependsOn: ALBListener # explicitly depends on the listener https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#aws-resource-ecs-service--examples
    Properties:
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref ECSTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref ECSSecurityGroup
          Subnets:
            - subnet-34b57f52
            - subnet-1e866044
      LoadBalancers:
        - ContainerName: prime-number-container
          ContainerPort: 80
          TargetGroupArn: !Ref ALBTargetGroup
  
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the Fargate containers
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/prime-number-app
      RetentionInDays: 7

Outputs:
  ALBDNSName:
    Description: "Public URL of the application"
    Value: !GetAtt ALB.DNSName

  ECSServiceName:
    Description: "Name of the ECS Service"
    Value: !Ref ECSFargateService

  TaskDefinitionArn:
    Description: "ARN of the ECS Task Definition"
    Value: !Ref ECSTaskDefinition
